changed some letters

--- a/foundryconfig.json
+++ b/foundryconfig.json
@@ -1,5 +1,5 @@
 {
   "dataPath": "",
-  "repository": "https://github.com/mkscho63/sta",
-  "rawURL": "https://raw.githubusercontent.com/mkscho63/sta"
+  "repository": "https://github.com/HamwiseGamgee/Irpg",
+  "rawURL": "https://raw.githubusercontent.com/HamwiseGamgee/Irpg"
 }
